--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,7 +14,15 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
+
     <div class="wrapper">
+      <% if flash[:message] %>
+        <h3><%= flash[:message] %></h3>
+      <% end %>
+      <% if flash[:errors] %>
+        <h3 style="color: red;"><%= flash[:errors]
+          %></h3>
+      <% end %>
 
         <%= yield %>
 
