add Team as attribute to investment_entries/new.erb

--- a/app/views/investment_entries/new.erb
+++ b/app/views/investment_entries/new.erb
@@ -15,6 +15,9 @@ new.erb
   <label>whitepaper:</label>
   <input type="text" name="whitepaper">
 
+  <label>Team:</label>
+  <input type="text" name="team">
+
   <input type="submit" id="submit"  name="submit"  value="Create Investment Entry">
 
 </form>
