add additional inputs for team

--- a/app/views/investment_entries/edit.erb
+++ b/app/views/investment_entries/edit.erb
@@ -9,9 +9,6 @@
   <label">code:</label>
   <input type="text" name="code" value="<%= @investment_entry.code %>">
   <label>whitepaper:</label>
-  <input type="text" name="whitepaper" value="<%= @investment_entry.whitepaper %>>
-  <label>Team:</label>
-  <input type="text" name="team" value="<%= @investment_entry.team.name %>>
-
-  <input type="submit" name="" value="submit">
+  <input type="text" name="whitepaper" value="<%= @investment_entry.whitepaper %>">
+  <input type="submit" name= "" value="submit">
 </form>
