add a back button

--- a/app/views/investment_entries/show.erb
+++ b/app/views/investment_entries/show.erb
@@ -1,3 +1,6 @@
+<a href="/investment_entries">👈 Back</a>
+<br>
+<br>
 <h3>coin_name: <%= @investment_entry.coin_name %> </h3>
 <br>
 <h3>community: <%= @investment_entry.community %> </h3>
