add heading, add link to login

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,5 +1,6 @@
-users/login!
-
+<h1>Please sign up here!</h1>
+<br>
+<br>
 <form class="" action="/signup" method="post">
   <label for="username">Username: </label>
   <input type="text" name="username" value="">
@@ -8,5 +9,7 @@ users/login!
   <label for="password">Password: </label>
   <input type="password" name="password" value="">
   <input type="submit" id="submit"  name="submit"  value="Login">
-
 </form>
+<br>
+<br>
+<a href="/login">But, I'm already signed up already!</a>
