--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,6 @@
+<h1>Login here!</h1>
+<br>
+<br>
 <form class="" action="/login" method="post">
   <label for="username">Username: </label>
   <input type="text" name="username" value="">
@@ -5,3 +8,6 @@
   <input type="password" name="password" value="">
   <input type="submit" id="submit"  name="submit"  value="Login">
 </form>
+<br>
+<br>
+<a href="/signup">But, I did't sign up yet 😭!</a>
