--- a/app/views/investment_entries/show.erb
+++ b/app/views/investment_entries/show.erb
@@ -1,24 +1,23 @@
 <a href="/investment_entries">👈 Back</a>
 <br>
 <br>
-<h3>coin_name: <%= @investment_entry.coin_name %> </h3>
-<br>
-<h3>community: <%= @investment_entry.community %> </h3>
-<br>
-<h3>code: <%= @investment_entry.code %> </h3>
-<br>
-<h3>whitepaper: <%= @investment_entry.whitepaper %> </h3>
 
+<p>
+<li><b>Coin:</b> <%= @investment_entry.coin_name %> <br/> </li>
+<li><b>Community:</b> <%= @investment_entry.community %> <br/> </li>
+<li><b>Code:</b> <%= @investment_entry.code %> <br/> </li>
+<li><b>Whitepaper:</b> <%= @investment_entry.whitepaper %> <br/> </li>
+<li><b>Team:</b> <% @investment_entry.teams.each do |team| %> </li>
+  <li><%= team.name %></li>
+    <% end %>
+<br>
 <% if authorized_to_edit?(@investment_entry) %>
 <form class="" action="/investment_entries/<%= @investment_entry.id %>" method="post">
   <!--  -->
   <input type="hidden" name="_method" value="DELETE">
   <input type="submit" name="" value="Delete Investment Entry">
 </form>
+<br>
+<a href="/investment_entries/<%= @investment_entry.id %>/edit"> edit investment entry</a>
 
-<form class="" action="/investment_entries/<%= @investment_entry.id %>" method="post">
-  <!--  -->
-  <input type="hidden" name="_method" value="patch">
-  <input type="submit" name="" value="Edit Investment Entry">
-</form>
 <% end %>
