--- a/app/views/investment_entries/edit.erb
+++ b/app/views/investment_entries/edit.erb
@@ -11,8 +11,8 @@
   <label>whitepaper:</label>
   <input type="text" name="whitepaper" value="<%= @investment_entry.whitepaper %>">
   <label>A founding team member:</label>
-  <% @investment_entry.teams.each do |team| %>
-  <input type="text" name="name" value="<%= team.name %>">
+  <% @investment_entry.teams.each_with_index do |team| %>
+  <input type="text" name="teams<%=index%>" value="<%= team.name %>">
     <% end %>
   <input type="submit" name= "" value="submit">
 </form>
