--- a/app/views/investment_entries/index.erb
+++ b/app/views/investment_entries/index.erb
@@ -11,7 +11,7 @@
 <li><b>community:</b> <%= investment_entry.community %></li>
 <li><b>code:</b> <%= investment_entry.code %></li>
 <li><b>whitepaper:</b> <%= investment_entry.whitepaper %></li>
-<li><b>date:</b> <%= investment_entry.date.to_formatted_s(:long) %></li>
+<!-- <li><b>date:</b> <%= investment_entry.date.to_formatted_s(:long) %></li> -->
 <li><b>Team:</b>
   <ul><% investment_entry.teams.each do |team| %>
 <li><%= team.name %></li>
