--- a/app/views/investment_entries/new.erb
+++ b/app/views/investment_entries/new.erb
@@ -1,5 +1,6 @@
 <h2>Create a new Investment Entry: </h2>
-
+<%#= the value for the name attribute is the key for the params. the value of
+the params is what the user inputed into the form  %>
 <form class="" action="/investment_entries" method="post">
   <label>Coin:</label>
   <input type="text" name="coin_name">
