--- a/app/views/investment_entries/index.erb
+++ b/app/views/investment_entries/index.erb
@@ -7,18 +7,26 @@
 <br>
 
 <ul><% @investment_entries.each do |investment_entry| %>
-<li><b>Coin:</b> <a href="/investment_entries/<%= investment_entry.id %>"><%= investment_entry.coin_name %></a></li>
-<li><b>community:</b> <%= investment_entry.community %></li>
-<li><b>code:</b> <%= investment_entry.code %></li>
-<li><b>whitepaper:</b> <%= investment_entry.whitepaper %></li>
-<!-- <li><b>date:</b> <%= investment_entry.date.to_formatted_s(:long) %></li> -->
-<li><b>Team:</b>
-  <ul><% investment_entry.teams.each do |team| %>
-<li><%= team.name %></li>
+  <li><b>Coin:</b> <a href="/investment_entries/<%= investment_entry.id %>"><%= investment_entry.coin_name %></a></li>
+  <li><b>community:</b> <%= investment_entry.community %></li>
+  <li><b>code:</b> <%= investment_entry.code %></li>
+  <li><b>whitepaper:</b> <%= investment_entry.whitepaper %></li>
+  <li><b>date:</b> <%= investment_entry.date.to_formatted_s(:long) %></li>
+  <li><b>Team:</b>
+    <ul><% investment_entry.teams.each do |team| %>
+  <li><%= team.name %></li>
   <% end %>
   </ul>
   </li>
   <br>
+  <li>
+    <strong>Users:</strong>
+    <ul>
+      <% investment_entry.users.each do |user| %>
+        <li><%= user.username %></li>
+      <% end %>
+    </ul>
+  </li>
+  <br>
 <%end %>
-
 </ul>
