--- a/app/views/coins/new.erb
+++ b/app/views/coins/new.erb
@@ -1,7 +1,7 @@
 <h2>Create a new Investment Entry: </h2>
 <%#= the value for the name attribute is the key for the params. the value of
 the params is what the user inputed into the form  %>
-<form class="" action="/investment_entries" method="post">
+<form class="" action="/coins" method="post">
   <label>Coin:</label>
   <input type="text" name="coin_name">
 
@@ -27,6 +27,6 @@ the params is what the user inputed into the form  %>
   <input type="text" name="team3">
 
 
-  <input type="submit" id="submit"  name="submit"  value="Create Investment Entry">
+  <input type="submit" id="submit"  name="submit"  value="Create Coin Entry">
 
 </form>
