--- a/app/views/application/index.erb
+++ b/app/views/application/index.erb
@@ -1,3 +1,4 @@
-<h1>NYC Sinatra Lab</h1>
+<h1>My Investment Log</h1>
 
 <a class="button" href="/coins">View Coins</a>
+<a class="button" href="/startups">View Startups</a>
