--- a/app/views/coins/edit.erb
+++ b/app/views/coins/edit.erb
@@ -1,21 +1,21 @@
-<h2>Edit Investment Entry: </h2>
+<h2>Edit Coin Entry: </h2>
 <%#= Rack::MethodOverride allows me to change the http verb of a request
 patch request changes existing information %>
 
 <%#=  why patch request %>
 <%#= because we are changing existing information.    %>
-<form class="" action="/investment_entries/<%= @investment_entry.id%>" method="post">
+<form class="" action="/coins/<%= @coin.id%>" method="post">
   <input type="hidden" name="_method" value="patch">
   <label>coin_name:</label>
-  <input type="text" name="coin_name" value="<%= @investment_entry.coin_name %>">
+  <input type="text" name="coin_name" value="<%= @coin.coin_name %>">
   <label>community:</label>
-  <input type="text" name="community" value="<%= @investment_entry.community %>">
+  <input type="text" name="community" value="<%= @coin.community %>">
   <label">code:</label>
-  <input type="text" name="code" value="<%= @investment_entry.code %>">
+  <input type="text" name="code" value="<%= @coin.code %>">
   <label>whitepaper:</label>
-  <input type="text" name="whitepaper" value="<%= @investment_entry.whitepaper %>">
+  <input type="text" name="whitepaper" value="<%= @coin.whitepaper %>">
   <label>A founding team member:</label>
-  <% @investment_entry.teams.each_with_index do |team,index| %>
+  <% @coin.teams.each_with_index do |team,index| %>
   <input type="text" name="team<%=index%>" value="<%= team.name %>">
     <% end %>
   <input type="submit" name= "" value="submit">
